--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.5.2",
     "react-resizable-panels": "^2.1.3",
